--- a/myweb/assests/css/style.css
+++ b/myweb/assests/css/style.css
@@ -1,11 +1,12 @@
-
-header > nav > ul{
+/*Star Header Area*/
+header > nav > ul {
     position: absolute;
     right: 24px;
     font-size: 20px;
     top: 0;
     list-style: none;
 }
+
 header > nav > ul > li {
     display: inline-block;
     cursor: pointer;
@@ -13,69 +14,362 @@ header > nav > ul > li {
     padding: 10px;
     color: #ffffff;
 }
+
+/*End Header Area*/
+
 /* main content */
-.one{
+body {
+    font-family: "Ubuntu Light";
+}
+
+/*Section One Start*/
+.one {
     width: auto;
     height: 450px;
     background-color: #403f3d;
 
 }
 
-.two{
+/*Section Two Start*/
+.two {
     width: auto;
     height: 80px;
-    background-color: #c45252;
+    background-color: #ffffff;
 
 }
-.three{
+
+.two > div {
+
+}
+
+.two > div:nth-child(1) {
+    width: 25%;
+    height: 80px;
+    float: left;
+}
+
+.two > div:nth-child(2) {
+    width: 25%;
+    height: 80px;
+    float: left;
+}
+
+.two > div:nth-child(3) {
+    width: 25%;
+    height: 80px;
+    float: left;
+}
+
+.two > div:nth-child(4) {
+    width: 25%;
+    height: 80px;
+    float: left;
+}
+
+/*Section Three Start*/
+.three {
     width: auto;
     height: 350px;
     background-color: #ffffff;
 
 }
-.four{
+
+main > section:nth-child(3) > div {
+    background-color: #e9e9e9;
+    width: 50%;
+    height: 350px;
+    float: left;
+    display: inline-block;
+}
+
+/*Section Four Start*/
+.four {
     width: auto;
     height: 400px;
     background-color: #fed700;
 
 }
-.five{
+
+/*Section Five Start*/
+.five {
     width: auto;
     height: 600px;
     background-color: #ffffff;
 
 }
-.six{
+
+/*Section Six Start*/
+.six {
     width: auto;
     height: 300px;
     background-color: #ffedb8;
 
 }
-.seven{
+
+.six > div {
+    width: 50%;
+    height: 300px;
+    display: inline-block;
+    float: left;
+}
+
+/*Section Seven Start*/
+.seven {
     width: auto;
     height: 250px;
     background-color: #fed700;
 
 }
-.eight{
+
+/*Section Eight Start*/
+.eight {
     width: auto;
     height: 450px;
     background-color: #ffffff;
 
 }
-.nine{
+.eight_title{
+    background-color: aquamarine;
+}
+
+.eight_title > h2 {
+    height: 50px;
+    margin: 0px 0px 0px 80px;
+
+}
+.blog-article{
+    width: auto;
+    height: 320px;
+    margin: 0px 100px 0px 100px;
+}
+.blog-01{
+    background-color: #ff253a;
+}
+.blog-img-01{
+    width: 300px;
+    height: 250px;
+    background-color: white;
+    margin: auto;
+}
+.blog-Title-01{
+    margin: 10px 70px 0px 70px;
+}
+.blog-description-01{
+    margin: 0px 70px 0px 70px;
+    font-size: 13px;
+}
+.blog-02{
+    background-color: #5fff25;
+}
+.blog-img-02{
+
+    width: 300px;
+    height: 250px;
+    background-color: white;
+    margin: auto;
+}
+.blog-Title-02{
+    margin: 10px 70px 0px 70px;
+}
+.blog-description-02{
+    margin: 0px 70px 0px 70px;
+    font-size: 13px;
+}
+.blog-03{
+    background-color: #25deff;
+}
+.blog-img-03{
+
+    width: 300px;
+    height: 250px;
+    background-color: white;
+    margin: auto;
+}
+.blog-Title-03{
+    margin: 10px 70px 0px 70px;
+}
+.blog-description-03{
+    margin: 0px 70px 0px 70px;
+    font-size: 13px;
+}
+.blog-article>div{
+    width: 33.33%;
+    height: 320px;
+    display: inline-block;
+    float: left;
+}
+.www{
+    background-color: bisque;
+}
+input[type=click]{
+    display: block;
+    margin:auto;
+    padding: 10px;
+    background-color: black;
+    color: white;
+    text-align: center;
+    width: 120px;
+    border-radius: 50px;
+}
+/*Section Nine Start*/
+.nine {
     width: auto;
     height: 80px;
     background-color: #fed700;
 
 }
 
-footer{
+.newsLetter {
+    display: inline-block;
+}
+
+.newsLetter > h4 {
+    margin: 15px 0px 0px 70px;
+    font-family: "Ubuntu Light";
+}
+
+.newsLetter > p {
+    margin: 2px 0px 0px 70px;
+    width: 450px;
+    font-size: 13px;
+}
+
+.subscription_box {
+    float: right;
+    margin: 20px 50px 0px 100px;
+
+}
+
+.email {
+    display: inline-block;
+}
+
+.submitBtn {
+    display: inline-block;
+}
+
+input[type=text] {
+    width: 400px;
+    padding: 10px 10px 10px 40px;
+    border: 1px solid #ccc;
+    border-radius: 50px 0px 0px 50px;
+    margin-right: -5px;
+}
+
+input[type=submit] {
+    width: 120px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 0px 50px 50px 0px;
+    background-color: black;
+    color: #e9e9e9;
+    font-family: "Ubuntu Medium";
+}
+
+
+footer {
     width: auto;
     height: 300px;
-    background-color: #403f3d;
+    background-color: #403F3D;
 }
-footer>h1{
+
+.links_area {
+    width: auto;
+    height: 230px;
+    display: flex;
+    margin-left: 100px;
+    margin-right: 100px;
+    color: white;
+}
+
+.column-1 {
+    width: 25%;
+    height: 240px;
+}
+
+.column-1 > h4 {
+}
+
+.column-1 > p {
+    font-size: 13px;
+    margin-bottom: 4px;
+    margin-top: 4px;
+}
+
+.column-2 {
+    width: 25%;
+    height: 240px;
+}
+
+.column-2 > h4 {
+}
+
+.column-2 > p {
+    font-size: 13px;
+    margin-bottom: 4px;
+    margin-top: 6px;
+}
+
+.column-3 {
+    width: 25%;
+    height: 240px;
+}
+
+.column-3 > a {
+    display: block;
+    font-size: 13px;
+    margin-bottom: 4px;
+    margin-top: 4px;
+}
+
+.column-4 {
+    width: 25%;
+    height: 240px;
+}
+
+.column-4 > h4 {
+}
+
+.column-4 > a {
+    width: 25px;
+    height: 25px;
+    display: inline-block;
+}
+.column-4>a>img{
+    border-radius: 5px;
+}
+
+.footer_menu {
+    width: 562px;
+    margin: auto;
+}
+
+.footer_menu > div {
+    color: white;
+
+}
+
+div > a:link {
+    color: white;
+    text-decoration: none;
+    margin-right: 8px;
+    font-size: 13px;
+
+}
+
+.developer {
+    width: 255px;
+    margin: auto;
+}
+
+.developer > p {
+    color: white;
+    font-size: 11px;
+    margin: 4px 0px 0px 0px;
+
+}
+
+footer > h1 {
     margin: 0;
     color: #eeeeee;
 }
