--- a/myweb/assests/css/style.css
+++ b/myweb/assests/css/style.css
@@ -37,33 +37,65 @@ body {
     width: 19%;
     border: 12px solid #eeeeee;
     background-color: white;
+    outline: 1px dashed #000000;
+    outline-offset: -11px;
 }
 .wrap-image>img{
     width: 100%;
     height: 100%;
 
 }
+.social-media>img{
+    width: 30px;
+    height: 30px;
+    margin: 5px 0px 0px 10px ;
+    border-radius: 100px;
+}
 .my-details{
     position: absolute;
-    top: 150px;
+    top: 250px;
     right: 5%;
     width: 64%;
-    height:300px;
-    background-color: #ff253a;
+    height:200px;
+}
+.my-details>h1{
+    font-size: 3.75rem;
+    margin: 10px 0px 10px 20px ;
+    color: #fed700;
+}
+.my-details>h2{
+    font-size: 1.35rem;
+    margin: 0px 0px 0px 23px ;
+    color: #eaeaea;
+    font-family: Nanum Gothic;
+    font-weight:lighter;
+}
+.my-details>h3{
+    font-size: 1.3rem;
+    margin: 10px 0px 0px 23px ;
+    color: #eaeaea;
+    font-family: "Cookie";
+    font-weight:lighter;
+}
+.my-details>h4{
+    font-size: 1rem;
+    margin: 10px 0px 0px 23px ;
+    color: #ffffff;
+    font-family: "Nanum Gothic";
+    font-weight:lighter;
 }
 .social-media{
     position: absolute;
-    top: 150px;
+    top: 200px;
     right: 0;
     width: 5%;
-    height: 300px;
-    background-color: #fed700;
+    height: 250px;
 }
 
 /*Section Two Start*/
 .two {
     width: auto;
-    height: 80px;
+    height: 100px;
     background-color: #ffffff;
 
 }
@@ -76,24 +108,58 @@ body {
     width: 31%;
     height: 80px;
     float: left;
+
+}
+.two>div>img{
+    width: 50px;
+    height: 50px;
+    margin:15px;
+    border-radius: 100px;
+    float: left;
+}
+.two>div>div{
+    position: relative;
+    top: 13px;
+    bottom: 13px;
+    font-size: 18px;
+}
+.two>div>div>a{
+    color: #403F3D;
+    position: relative;
+    top: 15px;
+    bottom: 15px;
+    font-size: 18px;
+    text-decoration: none;
 }
 
 .two > div:nth-child(2) {
     width: 23%;
     height: 80px;
     float: left;
+    border-top: none;
+    border-right: solid black;
+    border-bottom: solid black;
+    border-width: 0.01em;
 }
 
 .two > div:nth-child(3) {
     width: 23%;
     height: 80px;
     float: left;
+    border-top: none;
+    border-right: solid black;
+    border-bottom: solid black;
+    border-width: 0.01em;
 }
 
 .two > div:nth-child(4) {
-    width: 23%;
+    width: 22.8%;
     height: 80px;
     float: left;
+    border-top: none;
+    border-right: solid black;
+    border-bottom: solid black;
+    border-width: 0.01em;
 }
 
 /*Section Three Start*/
