--- a/myweb/assests/css/style.css
+++ b/myweb/assests/css/style.css
@@ -5,6 +5,17 @@ header > nav > ul {
     font-size: 20px;
     top: 0;
     list-style: none;
+
+}
+header>nav>ul>li>a:link{
+
+    color: #fed700;
+    text-decoration: none;
+}
+header>nav>ul>li>a:visited{
+
+    color: #fed700;
+    text-decoration: none;
 }
 
 header > nav > ul > li {
@@ -13,6 +24,8 @@ header > nav > ul > li {
     font-family: "Ubuntu Light";
     padding: 10px;
     color: #ffffff;
+
+
 }
 
 /*End Header Area*/
@@ -23,7 +36,7 @@ body {
 }
 
 /*Section One Start*/
-.one {
+#one {
     width: auto;
     height: 450px;
     background-color: #403f3d;
@@ -93,37 +106,37 @@ body {
 }
 
 /*Section Two Start*/
-.two {
+#two {
     width: auto;
     height: 100px;
     background-color: #ffffff;
 
 }
 
-.two > div {
+#two > div {
 
 }
 
-.two > div:nth-child(1) {
+#two > div:nth-child(1) {
     width: 31%;
     height: 80px;
     float: left;
 
 }
-.two>div>img{
+#two>div>img{
     width: 50px;
     height: 50px;
     margin:15px;
     border-radius: 100px;
     float: left;
 }
-.two>div>div{
+#two>div>div{
     position: relative;
     top: 13px;
     bottom: 13px;
     font-size: 18px;
 }
-.two>div>div>a{
+#two>div>div>a{
     color: #403F3D;
     position: relative;
     top: 15px;
@@ -132,7 +145,7 @@ body {
     text-decoration: none;
 }
 
-.two > div:nth-child(2) {
+#two > div:nth-child(2) {
     width: 23%;
     height: 80px;
     float: left;
@@ -142,7 +155,7 @@ body {
     border-width: 0.01em;
 }
 
-.two > div:nth-child(3) {
+#two > div:nth-child(3) {
     width: 23%;
     height: 80px;
     float: left;
@@ -152,7 +165,7 @@ body {
     border-width: 0.01em;
 }
 
-.two > div:nth-child(4) {
+#two > div:nth-child(4) {
     width: 22.8%;
     height: 80px;
     float: left;
@@ -163,7 +176,7 @@ body {
 }
 
 /*Section Three Start*/
-.three {
+#three {
     width: auto;
     height: 280px;
     background-color: #ffffff;
@@ -194,14 +207,14 @@ main > section:nth-child(3) > div {
 }
 
 /*Section Four Start*/
-.four {
+#four {
     width: auto;
     height: 400px;
     background-color: #fed700;
 
 }
 
-.four > div {
+#four > div {
     width: 50%;
     height: 400px;
     float: left;
@@ -234,7 +247,7 @@ main > section:nth-child(3) > div {
 }
 
 /* <<------------------Section Five Start------------------------>>> */
-.five {
+#five {
     width: auto;
     height: 600px;
     background-color: #ffffff;
@@ -351,14 +364,14 @@ main > section:nth-child(3) > div {
 }
 
 /* <<------------------Section Six Start------------------------>>> */
-.six {
+#six {
     width: auto;
     height: 350px;
     background-color: #ffedb8;
 
 }
 
-.six > div {
+#six > div {
     width: 50%;
     height: 350px;
     display: inline-block;
@@ -450,7 +463,7 @@ main > section:nth-child(3) > div {
 }
 
 /*Section Seven Start*/
-.seven {
+#seven {
     width: auto;
     height: 300px;
     background-color: #fed700;
@@ -480,7 +493,7 @@ main > section:nth-child(3) > div {
 }
 
 /*Section Eight Start*/
-.eight {
+#eight {
     width: auto;
     height: 450px;
     background-color: #ffffff;
@@ -601,7 +614,7 @@ button[type=button] {
 }
 
 /*Section Nine Start*/
-.nine {
+#nine {
     width: auto;
     height: 80px;
     background-color: #fed700;
